// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`move-data-type should handle moving non-existent data type 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The data type could not be found","status":404,"operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`move-data-type should handle moving to non-existent folder 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The targeted parent for the data type operation was not found.","status":404,"operationStatus":"ParentNotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`move-data-type should move a data type 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
